Fixup horizontal scrolling and frozen columns to tree view

--- a/src/style.css
+++ b/src/style.css
@@ -9,20 +9,22 @@
   --bg-primary: #ffffff;
   --text-primary: #000000;
   --border-color: #333333;
-  --accent: #2563eb;
+  --accent: #4882fd;
   --cell-bg: #ffffff;
   --keypad-bg: #e5e7eb;
   --btn-bg: #f3f4f6;
   --header-bg: #ffffff;
+  --active-cell-bg: rgb(198, 217, 248);
 }
 
 .dark-mode {
   --bg-primary: #000000;
   --text-primary: #ffffff;
   --border-color: #444444;
-  --accent: #3b82f6;
+  --accent: #4882fd;
   --cell-bg: #1a1a1a;
   --keypad-bg: #111111;
   --btn-bg: #222222;
   --header-bg: #000000;
+  --active-cell-bg: rgb(97, 158, 255);
 }
